# bwi_ros2_simulation

./: .dockerignore  .gitignore  Dockerfile  bwi.sh
docker/: entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bwi_launch/share/bwi_launch/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bwi_perc/lib/bwi_perc/: bwibot_detection_gazebo_r1  bwibot_detection_gazebo_r2
install/bwi_perc/share/bwi_perc/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bwi_perception_interface/share/bwi_perception_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bwi_reset/lib/bwi_reset/: reset_robots
install/bwi_reset/share/bwi_reset/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bwi_tasks/lib/bwi_tasks/: door_to_door_collision_avoidance_r1  door_to_door_collision_avoidance_r2
install/bwi_tasks/share/bwi_tasks/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bwi_tasks_interface/share/bwi_tasks_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bwi_tasks_interface/share/bwi_tasks_interface/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  bwi_tasks_interface__rosidl_typesupport_cExport.cmake  bwi_tasks_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  bwi_tasks_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_bwi_tasks_interface__rosidl_generator_cExport.cmake  export_bwi_tasks_interface__rosidl_generator_pyExport.cmake  export_bwi_tasks_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_bwi_tasks_interface__rosidl_typesupport_fastrtps_cppExport.cmake
install/bwi_tasks_interface/share/bwi_tasks_interface/msg/: VirtualObstacle.idl  VirtualObstacle.msg
install/bwi_tools/lib/bwi_tools/: range_analyzer_node
install/bwi_tools/share/bwi_tools/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/collision_monitor/lib/collision_monitor/: collision_detector
install/collision_monitor/share/collision_monitor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/convex_decomposition/lib/convex_decomposition/: convex_decomposition
install/convex_decomposition/share/convex_decomposition/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ivcon/share/ivcon/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kinect_data_collector/lib/kinect_data_collector/: data_collector_node
install/kinect_data_collector/share/kinect_data_collector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/libsegwayrmp/lib/pkgconfig/: libsegwayrmp.pc
install/libsegwayrmp/share/libsegwayrmp/: libsegwayrmpConfig.cmake  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_virtual_obstacle_layer/include/my_virtual_obstacle_layer/: virtual_obstacle_layer.hpp  working_copy.hpp
log/: latest_build
serial/: CMakeLists.txt
src/bwi_launch/: CMakeLists.txt
src/bwi_launch/config/: rviz_config_r2.rviz
src/bwi_launch/launch/: segbot_v2.launch.py
src/bwi_launch/scripts/: odom_tf_broadcaster.py
src/bwi_perc/: setup.cfg  setup.py
src/bwi_perc/bwi_perc/: bwibot_detection_gazebo_r1.py  bwibot_detection_gazebo_r2.py
src/bwi_perception_interface/: CMakeLists.txt
src/bwi_reset/: setup.cfg  setup.py
src/bwi_reset/bwi_reset/: reset_robots.py
src/bwi_tasks/: setup.py
src/bwi_tasks/bwi_tasks/: door_to_door_collision_avoidance_r1.py  door_to_door_collision_avoidance_r2.py
src/bwi_tasks_interface/: CMakeLists.txt
src/bwi_tools/: setup.cfg  setup.py
src/collision_monitor/: setup.cfg  setup.py
src/collision_monitor/collision_monitor/: collision_detector.py
src/kinect_data_collector/: package.xml  setup.cfg  setup.py
src/libsegwayrmp/src/: segwayrmp.cc
src/my_virtual_obstacle_layer/: CMakeLists.txt  virtual_obstacle_plugin.xml
src/my_virtual_obstacle_layer/src/: virtual_obstacle_layer.cpp  working_copy.cpp
src/nav2_bringup/params/: nav2_params_multi_robot_1.yaml  nav2_params_multi_robot_2.yaml
src/segbot_description/: CMakeLists.txt
src/segbot_description/gazebo/: segbot.gazebo.xacro
src/segbot_description/meshes/: hokuyo.dae  rmp50-castor-wheel.stl  rmp50-left-wheel.stl
src/segbot_description/robots/: segbot_v2.urdf.xacro
src/segbot_description/urdf/: segbot_wheel.urdf.xacro
src/segway_rmp_ros2/: CMakeLists.txt  README.md  package.xml
src/segway_rmp_ros2/launch/: segway_rmp_ros2.launch.py
src/segway_rmp_ros2/src/: segway_ros2_rmp copy.cpp  segway_ros2_rmp.cpp
src/teleop_multi_robot/: setup.cfg  setup.py
src/test_cmaes/: setup.cfg  setup.py
src/test_odom/: package.xml  setup.cfg  setup.py
src/utexas_gdc/: CMakeLists.txt  package.xml
src/utexas_gdc/worlds/: 2.world  3ne.world  combined.world  hallway_correct.world
(+279 files in other folders)
