<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segway_rmp_ros2</name>
  <version>0.0.0</version>
  <description>Segway RMP ROS2 package</description>
  <maintainer email="nparmar@utexas.edu">Nikunj Parmar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>libsegwayrmp</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>libsegwayrmp</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
