<package format="3">
  <name>bwi_tasks_interface</name>
  <version>0.0.0</version>
  <description>Interfaces for BWI multi‑robot tasks.</description>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache‑2.0</license>
</package>
